# realtime_database_gmod_module

./: .gitignore  CMakeLists.txt  build.ps1  deploy.ps1  start.bat - Raccourci.lnk  start.ps1
.github/instructions/: module_realtime_gmod.instructions.md
[gameplay]ctf/: developer_document.txt  read_this.txt
[gameplay]ctf/lua/autorun/: mg_ctf_init.lua
[gameplay]ctf/lua/effects/mg_ctf_capture/: init.lua
[gameplay]ctf/lua/effects/mg_ctf_cashout/: init.lua
[gameplay]ctf/lua/entities/ctf_area/: init.lua
[gameplay]ctf/lua/entities/ctf_flag/: cl_init.lua  init.lua  shared.lua
[gameplay]ctf/lua/entities/ctf_zone/: init.lua
[gameplay]ctf/lua/mg_ctf/: mg_ctf_config.lua  mg_ctf_main.lua
[gameplay]ctf/lua/mg_ctf/client/: mg_ctf_advert.lua  mg_ctf_hud.lua  mg_ctf_main.lua  mg_ctf_map.lua  mg_ctf_theme.lua
[gameplay]ctf/lua/mg_ctf/languages/: ch.lua  de.lua  en.lua  es.lua  fr.lua  pl.lua  ru.lua  tr.lua
[gameplay]ctf/lua/mg_ctf/server/: mg_ctf_factions.lua  mg_ctf_main.lua  mg_ctf_map.lua  mg_ctf_tool.lua  mg_ctf_zones.lua
[gameplay]ctf/lua/weapons/: mg_ctf_map.lua
[gameplay]ctf/lua/weapons/mg_ctf_setup/: cl_hud.lua  cl_init.lua  cl_menu.lua  cl_theme.lua  init.lua  shared.lua
[gameplay]ctf/materials/models/toju/mg_ctf/: mgctf_flag1.vmt  mgctf_flag1_nrm.vtf  mgctf_flag2.vmt  (+4 more)
[gameplay]ctf/models/toju/mg_ctf/: flag.dx80.vtx  flag.dx90.vtx  flag.mdl  flag.phy  flag.sw.vtx  flag.vvd
[vehicle]logistique/lua/ammo_system/: cl_ammo_cache_menu.lua  cl_ammo_cache_ui_french.lua  cl_ammo_cache_ui_russian.lua  sh_ammo_cache.lua  sv_ammo_cache_menu.lua
[vehicle]logistique/lua/autorun/: reloader_npc_init.lua
[vehicle]logistique/lua/entities/anomalie_ammo_cache/: init.lua  shared.lua  sv_init.lua
[vehicle]logistique/lua/entities/anomalie_camp_case/: cl_init.lua  init.lua  shared.lua  sv_init.lua
[vehicle]logistique/lua/entities/anomalie_french_transport/: cl_init.lua  init.lua  shared.lua
[vehicle]logistique/lua/entities/anomalie_russian_transport/: init.lua  shared.lua
[vehicle]logistique/lua/entities/lvs_zil431510/: init.lua  shared.lua
[vehicle]logistique/lua/entities/lvs_zil431510bort/: init.lua  shared.lua
[vehicle]logistique/lua/entities/lvs_zil431510budka/: init.lua  shared.lua
[vehicle]logistique/lua/entities/reloader_npc/: cl_init.lua  init.lua  shared.lua
build_x64/: ALL_BUILD.vcxproj  CMakeCache.txt  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  gmsv_realtime.sln  gmsv_realtime.vcxproj  gmsv_realtime.vcxproj.filters  test_message_queue.vcxproj  test_message_queue.vcxproj.filters
build_x64/gmsv_realtime.dir/Debug/: objects.txt
build_x64/gmsv_realtime.dir/MinSizeRel/: objects.txt
build_x64/gmsv_realtime.dir/RelWithDebInfo/: objects.txt
build_x64/gmsv_realtime.dir/Release/: exports.def  gmsv_realtime_win64.dll.recipe  objects.txt
build_x64/gmsv_realtime.dir/Release/gmsv_realtime.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_x64/test_message_queue.dir/Release/: test_message_queue.exe.recipe
build_x64/test_message_queue.dir/Release/test_mes.FB1F158A.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_x64/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_x64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_x86/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  gmsv_realtime.sln  gmsv_realtime.vcxproj  gmsv_realtime.vcxproj.filters  test_message_queue.vcxproj  test_message_queue.vcxproj.filters
build_x86/Win32/Release/ALL_BUILD/: ALL_BUILD.recipe
build_x86/Win32/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_x86/gmsv_realtime.dir/Debug/: objects.txt
build_x86/gmsv_realtime.dir/MinSizeRel/: objects.txt
build_x86/gmsv_realtime.dir/RelWithDebInfo/: objects.txt
build_x86/gmsv_realtime.dir/Release/: exports.def  gmsv_realtime_win32.dll.recipe  objects.txt
build_x86/gmsv_realtime.dir/Release/gmsv_realtime.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_x86/test_message_queue.dir/Release/: test_message_queue.exe.recipe
build_x86/test_message_queue.dir/Release/test_mes.DF2BDCF2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
docs/: ARCHITECTURE.md  COMPLETE_EVENT_FLOW.md  FEATURES_FR.md  LUA_TESTING_STRATEGY.md  PROGRESS.md  ROADMAP.md  ROADMAP_FR.md  TESTING_ON_GMOD.md  THREADING_DESIGN.md  USE_CASES_FR.md
include/: lua
include/realtime/: lua_bindings.h  performance_stats.h  redis_client.h  redis_event.h  subscription_manager.h
include/realtime/core/: core.h  lua_callback.h  message_queue.h
lua_scripts_for_gmod/: comparison_http_vs_redis.lua  lua_realtime_tracker.lua  migration_patterns.lua  realtime_perf_monitor.lua  realtime_vehicle_tracker.lua  realtime_vehicle_tracker_optimized.lua  realtime_wrapper.lua  test_comprehensive.lua  test_pubsub_direct.lua  test_realtime.lua  test_realtime_events.lua  vehicle_movement_chat.lua  vehicle_tracking_pure_lua.lua
scripts/: generate_lua_lib.ps1
src/: main.cpp
src/lua/: lua_api.cpp
src/realtime/: performance_stats.cpp  redis_client.cpp  subscription_manager.cpp
src/realtime/lua/: bindings.cpp
src/realtime/lua/connect/: lua_connect.cpp
src/realtime/lua/disconnect/: lua_disconnect.cpp
src/realtime/lua/is_connected/: lua_is_connected.cpp
src/realtime/lua/perf_stats/: lua_perf_stats.cpp
src/realtime/lua/process_events/: lua_process_events.cpp
src/realtime/lua/publish/: lua_publish.cpp
src/realtime/lua/subscribe/: lua_subscribe.cpp
tests/unit/: test_lua_callback.cpp  test_message_queue.cpp
(+12 files in other folders)
